--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ requires-python = ">=3.13"
 # ============================================================================
 dependencies = [
     "fastapi[standard]>=0.121.0",
+    "prometheus-client>=0.23.1",
+    "prometheus-fastapi-instrumentator>=7.1.0",
     "psycopg2-binary>=2.9.11",
     "sqlmodel>=0.0.27",
 ]
