--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -12,3 +12,11 @@ scrape_configs:
     scrape_interval: 10s
     static_configs:
       - targets: ["api:8000"]
+
+rule_files:
+  - /etc/prometheus/rules.yml
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets: ["alertmanager:9093"]
